--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -6,5 +6,36 @@ body, html {
 }
 
 #map {
-    height: 100%;
+    margin-top: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    
+    width: 80%;
+    height: 80%;
+    border: 3px solid #000000;
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #98c4d0; /* Set the background color */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 15%;
+    
+    
+}
+
+.navbar a {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.navbar a:hover {
+    background-color: #ddd; /* Change background color on hover */
+    color: black;
 }
