--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -3,29 +3,28 @@
 body, html {
     height: 100%;
     margin: 0;
-    background-color: #e2d8d8;
+    background-color: #d9c9c9;
 }
 
-#map {
-    margin-top: 100px;
-    margin-right: auto;
-    margin-left: auto;
-    
-    width: 80%;
-    height: 80%;
-    border: 3px solid #000000;
+.mastercontainer {
+    height: 100%;
+    width: 100%
 }
 
-.navbar {
-    overflow: hidden;
-    background-color: #0f0937; /* Set the background color */
+.header {
+    overflow: auto;
+    background-color: #0f0937; 
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 15%;
+    height: 100px;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
-.navbar a {
+.header a {
     float: left;
     display: block;
     color: white;
@@ -34,7 +33,22 @@ body, html {
     text-decoration: none;
 }
 
-.navbar a:hover {
-    background-color: #ddd; /* Change background color on hover */
+.header a:hover {
+    background-color: #ddd; 
     color: black;
+}
+
+.pages {
+    margin-top: 100px;
+    height: 80%;
+    width: 80%;
+    
+}
+
+.map {
+    margin-top: 100px;
+    
+    width: 100%;
+    height: 100%;
+    border: 3px solid #000000;
 }
