--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -2,8 +2,10 @@
 
 body, html {
     height: 100%;
+    width: 100%;
     margin: 0;
-    background-color: #d9c9c9;
+    background-color: #ebeaea;
+    
 }
 
 .mastercontainer {
@@ -12,22 +14,20 @@ body, html {
 }
 
 .header {
-    overflow: auto;
-    background-color: #0f0937; 
+    background-color: #ebeaea;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
     position: fixed;
-    top: 0;
+    height: 100px;
     width: 100%;
-    z-index: 1000;
+    top: 0;
 }
 
 .header a {
     float: left;
     display: block;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -40,15 +40,18 @@ body, html {
 
 .pages {
     margin-top: 100px;
-    height: 80%;
-    width: 80%;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    background-color: #ebeaea;
     
 }
 
 .map {
-    margin-top: 100px;
-    
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    height: 70%;
     border: 3px solid #000000;
+
 }
